--- a/app/src/main/res/layout/activity_maps_rentcar_mainfrag.xml
+++ b/app/src/main/res/layout/activity_maps_rentcar_mainfrag.xml
@@ -145,8 +145,8 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="16dp"
+            android:layout_height="14dp"
             android:src="@drawable/triangle"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
