--- a/app/src/main/res/layout/activity_maps_rentcar_time.xml
+++ b/app/src/main/res/layout/activity_maps_rentcar_time.xml
@@ -36,6 +36,7 @@
         android:layout_marginRight="32dp"
         android:layout_marginBottom="72dp"
         android:scrollbarSize="18dp"
+        tools:viewBindingIgnore="true"
         app:fadingEdgeEnabled="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
