--- a/app/src/main/res/layout/rental_list_detail.xml
+++ b/app/src/main/res/layout/rental_list_detail.xml
@@ -2,8 +2,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    tools:viewBindingIgnore="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
     tools:context=".UseDetailActivity">
 
     <!-- ActionBar 영역 -->
@@ -11,7 +13,8 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:id="@+id/rental_detail_include"
-        tools:ignore="MissingConstraints">
+        tools:ignore="MissingConstraints"
+        tools:viewBindingIgnore="true">
 
         <!-- ActionBar : Back / Title / Info -->
         <LinearLayout
@@ -53,6 +56,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        tools:viewBindingIgnore="true"
         app:layout_constraintTop_toBottomOf="@id/rental_detail_include">
 
          <androidx.core.widget.NestedScrollView
@@ -408,10 +412,10 @@
                         tools:ignore="MissingConstraints">
 
                         <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
                             android:orientation="vertical"
-                            android:layout_weight="0.2">
+                            android:layout_weight="0.4">
 
                             <TextView
                                 android:fontFamily="@font/nanumsquareregular"
@@ -456,26 +460,26 @@
                         </LinearLayout>
 
                         <LinearLayout
-                            android:layout_width="wrap_content"
+                            android:layout_width="0dp"
                             android:layout_height="match_parent"
                             android:orientation="vertical"
-                            android:layout_gravity="center|center_horizontal|center_vertical"
-                            android:gravity="center|center_horizontal|center_vertical"
-                            android:layout_weight="0.6">
+                            android:gravity="center_horizontal|center_vertical"
+                            android:layout_weight="0.2">
 
                             <ImageView
-                                android:layout_width="24dp"
-                                android:layout_height="24dp"
+                                android:id="@+id/timeTri"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
                                 app:layout_constraintStart_toStartOf="parent"
                                 app:layout_constraintTop_toTopOf="parent"
-                                app:srcCompat="@drawable/triangle" />
+                                android:src="@drawable/triangle" />
                         </LinearLayout>
 
                         <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
                             android:orientation="vertical"
-                            android:layout_weight="0.2">
+                            android:layout_weight="0.4">
 
                             <TextView
                                 android:fontFamily="@font/nanumsquareregular"
@@ -1025,6 +1029,7 @@
                         tools:ignore="MissingConstraints">
 
                         <LinearLayout
+
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:orientation="vertical">
@@ -1040,6 +1045,7 @@
                                 android:textSize="18sp"
                                 android:text="보험" />
                             <LinearLayout
+                                android:id="@+id/rental_car_insu_check"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="20dp"
@@ -1051,6 +1057,7 @@
                                     android:layout_height="24dp"
                                     android:layout_width="24dp"
                                     android:layout_span="2"
+                                    android:clickable="false"
                                     android:button="@drawable/checkbox_selector_1"
                                     android:layout_gravity="center|center_horizontal|center_vertical"
                                     android:paddingLeft="20px" />
@@ -1073,6 +1080,7 @@
                                     android:src="@drawable/info" />
 
                                 <TextView
+                                    android:id="@+id/rental_car_insurance"
                                     android:fontFamily="@font/nanumsquareregular"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
